// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNavigation.Link renders 1`] = `
.c2 {
  margin-left: 0;
  border-left: none;
}

.c2:hover {
  background-color: #f2eff4;
}

.c1 {
  background-color: none;
}

.c3 {
  border-left: none;
  margin-left: 0px;
}

.c4 {
  color: #54595f;
}

.c4:hover {
  color: #4b286d;
}

.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<Link
  active={false}
  href="#"
  reactRouterLinkComponent={null}
  subMenuLink={false}
  to={null}
>
  <Link__StyledAnchor
    href="#"
    to={null}
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Link__StyledAnchor-gur8v7-4",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "text-decoration: none;",
            ],
          },
          "displayName": "Link__StyledAnchor",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Link__StyledAnchor-gur8v7-4",
          "target": "a",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      href="#"
      to={null}
    >
      <a
        className="c0"
        href="#"
        to={null}
      >
        <Link__BoxWrapper
          active={0}
        >
          <StyledComponent
            active={0}
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "Link__BoxWrapper-gur8v7-1",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    [Function],
                  ],
                },
                "displayName": "Link__BoxWrapper",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "Link__BoxWrapper-gur8v7-1",
                "target": [Function],
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <Box
              active={0}
              className="c1"
              inline={false}
              tag="div"
            >
              <div
                active={0}
                className="c1"
              >
                <Link__BoxContainer
                  active={0}
                  subMenuLink={0}
                  vertical={3}
                >
                  <StyledComponent
                    active={0}
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "Link__BoxContainer-gur8v7-0",
                          "isStatic": false,
                          "lastClassName": "c2",
                          "rules": Array [
                            [Function],
                          ],
                        },
                        "displayName": "Link__BoxContainer",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "Link__BoxContainer-gur8v7-0",
                        "target": [Function],
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    subMenuLink={0}
                    vertical={3}
                  >
                    <Box
                      active={0}
                      className="c2"
                      inline={false}
                      subMenuLink={0}
                      tag="div"
                      vertical={3}
                    >
                      <div
                        active={0}
                        className="TDS_Box-modules__verticalPadding-3___Fsv37 c2"
                        subMenuLink={0}
                      >
                        <Link__BoxActive
                          active={0}
                          horizontal={3}
                          subMenuLink={0}
                        >
                          <StyledComponent
                            active={0}
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [],
                                "componentStyle": ComponentStyle {
                                  "componentId": "Link__BoxActive-gur8v7-2",
                                  "isStatic": false,
                                  "lastClassName": "c3",
                                  "rules": Array [
                                    [Function],
                                  ],
                                },
                                "displayName": "Link__BoxActive",
                                "foldedComponentIds": Array [],
                                "render": [Function],
                                "styledComponentId": "Link__BoxActive-gur8v7-2",
                                "target": [Function],
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            horizontal={3}
                            subMenuLink={0}
                          >
                            <Box
                              active={0}
                              className="c3"
                              horizontal={3}
                              inline={false}
                              subMenuLink={0}
                              tag="div"
                            >
                              <div
                                active={0}
                                className="TDS_Box-modules__horizontalPadding-3___2uoUp c3"
                                subMenuLink={0}
                              >
                                <Link__StyledTextProvider
                                  active={false}
                                >
                                  <StyledComponent
                                    active={false}
                                    forwardedComponent={
                                      Object {
                                        "$$typeof": Symbol(react.forward_ref),
                                        "attrs": Array [],
                                        "componentStyle": ComponentStyle {
                                          "componentId": "Link__StyledTextProvider-gur8v7-3",
                                          "isStatic": false,
                                          "lastClassName": "c4",
                                          "rules": Array [
                                            [Function],
                                          ],
                                        },
                                        "displayName": "Link__StyledTextProvider",
                                        "foldedComponentIds": Array [],
                                        "render": [Function],
                                        "styledComponentId": "Link__StyledTextProvider-gur8v7-3",
                                        "target": [Function],
                                        "toString": [Function],
                                        "warnTooManyClasses": [Function],
                                        "withComponent": [Function],
                                      }
                                    }
                                    forwardedRef={null}
                                  >
                                    <ColoredTextProvider
                                      active={false}
                                      className="c4"
                                    >
                                      <div
                                        className="c4"
                                      >
                                        <Text
                                          block={false}
                                          bold={false}
                                          invert={false}
                                          size="medium"
                                        >
                                          <span
                                            className="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__medium___1rxfE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__mediumFont___XMrRj TDS_Typography-modules__inheritColor___SREX0"
                                          >
                                            Home
                                          </span>
                                        </Text>
                                      </div>
                                    </ColoredTextProvider>
                                  </StyledComponent>
                                </Link__StyledTextProvider>
                              </div>
                            </Box>
                          </StyledComponent>
                        </Link__BoxActive>
                      </div>
                    </Box>
                  </StyledComponent>
                </Link__BoxContainer>
              </div>
            </Box>
          </StyledComponent>
        </Link__BoxWrapper>
      </a>
    </StyledComponent>
  </Link__StyledAnchor>
</Link>
`;

exports[`SideNavigation.Link renders with active styles 1`] = `
.c2 {
  margin-left: 0;
  border-left: 4px solid #4b286d;
  color: #4b286d;
  background-color: #f2eff4;
}

.c2:hover {
  background-color: #f2eff4;
}

.c1 {
  background-color: #f2eff4;
}

.c3 {
  border-left: none;
  margin-left: 0px;
}

.c4 {
  font-weight: bold;
  color: #4b286d;
}

.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<Link
  active={true}
  href="#"
  reactRouterLinkComponent={null}
  subMenuLink={false}
  to={null}
>
  <Link__StyledAnchor
    href="#"
    to={null}
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Link__StyledAnchor-gur8v7-4",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "text-decoration: none;",
            ],
          },
          "displayName": "Link__StyledAnchor",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Link__StyledAnchor-gur8v7-4",
          "target": "a",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      href="#"
      to={null}
    >
      <a
        className="c0"
        href="#"
        to={null}
      >
        <Link__BoxWrapper
          active={1}
        >
          <StyledComponent
            active={1}
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "Link__BoxWrapper-gur8v7-1",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    [Function],
                  ],
                },
                "displayName": "Link__BoxWrapper",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "Link__BoxWrapper-gur8v7-1",
                "target": [Function],
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <Box
              active={1}
              className="c1"
              inline={false}
              tag="div"
            >
              <div
                active={1}
                className="c1"
              >
                <Link__BoxContainer
                  active={1}
                  subMenuLink={0}
                  vertical={3}
                >
                  <StyledComponent
                    active={1}
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "Link__BoxContainer-gur8v7-0",
                          "isStatic": false,
                          "lastClassName": "c2",
                          "rules": Array [
                            [Function],
                          ],
                        },
                        "displayName": "Link__BoxContainer",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "Link__BoxContainer-gur8v7-0",
                        "target": [Function],
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    subMenuLink={0}
                    vertical={3}
                  >
                    <Box
                      active={1}
                      className="c2"
                      inline={false}
                      subMenuLink={0}
                      tag="div"
                      vertical={3}
                    >
                      <div
                        active={1}
                        className="TDS_Box-modules__verticalPadding-3___Fsv37 c2"
                        subMenuLink={0}
                      >
                        <Link__BoxActive
                          active={1}
                          horizontal={3}
                          subMenuLink={0}
                        >
                          <StyledComponent
                            active={1}
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [],
                                "componentStyle": ComponentStyle {
                                  "componentId": "Link__BoxActive-gur8v7-2",
                                  "isStatic": false,
                                  "lastClassName": "c3",
                                  "rules": Array [
                                    [Function],
                                  ],
                                },
                                "displayName": "Link__BoxActive",
                                "foldedComponentIds": Array [],
                                "render": [Function],
                                "styledComponentId": "Link__BoxActive-gur8v7-2",
                                "target": [Function],
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            horizontal={3}
                            subMenuLink={0}
                          >
                            <Box
                              active={1}
                              className="c3"
                              horizontal={3}
                              inline={false}
                              subMenuLink={0}
                              tag="div"
                            >
                              <div
                                active={1}
                                className="TDS_Box-modules__horizontalPadding-3___2uoUp c3"
                                subMenuLink={0}
                              >
                                <Link__StyledTextProvider
                                  active={true}
                                >
                                  <StyledComponent
                                    active={true}
                                    forwardedComponent={
                                      Object {
                                        "$$typeof": Symbol(react.forward_ref),
                                        "attrs": Array [],
                                        "componentStyle": ComponentStyle {
                                          "componentId": "Link__StyledTextProvider-gur8v7-3",
                                          "isStatic": false,
                                          "lastClassName": "c4",
                                          "rules": Array [
                                            [Function],
                                          ],
                                        },
                                        "displayName": "Link__StyledTextProvider",
                                        "foldedComponentIds": Array [],
                                        "render": [Function],
                                        "styledComponentId": "Link__StyledTextProvider-gur8v7-3",
                                        "target": [Function],
                                        "toString": [Function],
                                        "warnTooManyClasses": [Function],
                                        "withComponent": [Function],
                                      }
                                    }
                                    forwardedRef={null}
                                  >
                                    <ColoredTextProvider
                                      active={true}
                                      className="c4"
                                    >
                                      <div
                                        className="c4"
                                      >
                                        <Text
                                          block={false}
                                          bold={true}
                                          invert={false}
                                          size="medium"
                                        >
                                          <span
                                            className="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__medium___1rxfE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__boldFont___2YS3O TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__inheritColor___SREX0"
                                          >
                                            Home
                                          </span>
                                        </Text>
                                      </div>
                                    </ColoredTextProvider>
                                  </StyledComponent>
                                </Link__StyledTextProvider>
                              </div>
                            </Box>
                          </StyledComponent>
                        </Link__BoxActive>
                      </div>
                    </Box>
                  </StyledComponent>
                </Link__BoxContainer>
              </div>
            </Box>
          </StyledComponent>
        </Link__BoxWrapper>
      </a>
    </StyledComponent>
  </Link__StyledAnchor>
</Link>
`;
